--- a/source/translated/fr/virtualization.po
+++ b/source/translated/fr/virtualization.po
@@ -1,17 +1,16 @@
-# SOME DESCRIPTIVE TITLE.
+# S_O_M_E DESCRIPTIVE TITLE.
 # Copyright (C) 2012, OpenSVC SARL
 # This file is distributed under the same license as the OpenSVC package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Christophe Varoqui <christophe.varoqui@opensvc.com>, 2012.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: OpenSVC 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-07-18 11:41\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2012-07-23 15:36+01\n"
+"Last-Translator: Christophe Varoqui <christophe.varoqui@opensvc.com>\n"
+"Language-Team: OpenSVC translation team <translation@opensvc.com>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
